# crewai_azure

./: .env  .gitignore  README.md  main.py  pyproject.toml  tasks.py
